--- a/gb/21/10/17/n13310366.md
+++ b/gb/21/10/17/n13310366.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mvzvlt3463/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mvzvlt3463/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mvzvlt3463/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>薪资低于基本工资 自救方式报你知</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13310368-522534-600x400.png" />
 <h6>104人力银行指出，有33.5%受访者的薪资曾低于目前的基本工资2.4万元，并提醒民众，“业绩奖金”、“全勤奖金”都不算是基本工资。（104人力银行提供）
 </h6>
 <hr>
-<p>【大纪元2021年10月17日讯】（大纪元记者侯骏霖台湾台北报导）劳动部近期公布，明年起<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%9F%BA%E6%9C%AC.md#1">基本</a><ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>月薪将从2万4千元调升至2万5,250元，时薪由160元提高至168元，预估有超过245万名劳工受惠。不过，根据104人力银行的最新调查发现，有33.5%受访者的<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E8%96%AA%E8%B5%84.md#1">薪资</a>曾低于目前的基本工资2万4千元。</p>
-<p>104人力银行特别整理经常出现争议的<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E8%96%AA%E8%B5%84.md#1">薪资</a>态样与自救方式，并破解老板们怎么玩低了数据？对此，104人力银行指出，老板通常会以底薪2万元加上业绩<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%A5%96%E9%87%91.md#1">奖金</a>4千元为由，代表达到最低<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%9F%BA%E6%9C%AC.md#1">基本</a><ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>的要求。但是，业绩<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%A5%96%E9%87%91.md#1">奖金</a>并不属于“经常性给予”的薪资，在没业绩、奖金的状况下，就有可能让月薪低于2万4千元。</p>
+<p>【大纪元2021年10月17日讯】（大纪元记者侯骏霖台湾台北报导）劳动部近期公布，明年起<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9F%BA%E6%9C%AC.md#1">基本</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>月薪将从2万4千元调升至2万5,250元，时薪由160元提高至168元，预估有超过245万名劳工受惠。不过，根据104人力银行的最新调查发现，有33.5%受访者的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%96%AA%E8%B5%84.md#1">薪资</a>曾低于目前的基本工资2万4千元。</p>
+<p>104人力银行特别整理经常出现争议的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%96%AA%E8%B5%84.md#1">薪资</a>态样与自救方式，并破解老板们怎么玩低了数据？对此，104人力银行指出，老板通常会以底薪2万元加上业绩<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%96%E9%87%91.md#1">奖金</a>4千元为由，代表达到最低<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9F%BA%E6%9C%AC.md#1">基本</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84.md#1">工资</a>的要求。但是，业绩<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%96%E9%87%91.md#1">奖金</a>并不属于“经常性给予”的薪资，在没业绩、奖金的状况下，就有可能让月薪低于2万4千元。</p>
 <p>104人力银行提醒，全勤奖金也同样不是“经常性给予”，只要请事假就等于扣了全勤，当月薪资立即低于2万4千元，导致自身权益受损。</p>
 <p>上班族应如何自救？104人力银行建议，可以打电话至1955劳工咨询申诉专线，或是向各县市政府劳工局申诉。因为老板们除了怕被罚2万元以上、100万元以下罚锾外，也怕成为黑名单而影响生意的开拓。</p>
 <p>104人力银行表示，老板们的通常做法，可以改采“常态津贴”及“劳健保津贴”两种方案。其中，伙食津贴属于“常态性给予”，即为工资的一部分；劳健保费是法律允许雇主代替劳工扣缴，为常态费用，可由雇主扣除，也是常见的可行方案。</p>
@@ -17,47 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/9/13/n13230518.md#1">基本工资审议 劳动部：10月上旬、国庆日前召开</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/9/17/n13241949.md#1">学生打工 38%遇求职陷阱</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/9/22/n13252963.md#1">基本工资审议敲定10月8日举行</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/4/n13279129.md#1">农民工的黄金周是对社会主义优越性的讽刺</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/7/n13288212.md#1">许铭春表态：基本工资涨幅有望达3%</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/8/n13291098.md#1">台基本工资连6涨 月薪25250、时薪168</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/12/n13299410.md#1">军公教防疫有功 苏贞昌：鼓励朝调薪方向做</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/12/n13299419.md#1">台餐饮急需工读人力 基本时薪调幅恐无感</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/13/n13301929.md#1">移工拟有条件开放入台 劳长：完整接种疫苗者优先</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/13/n13301990.md#1">基本工资调涨 王美花：10月底前提配套</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/13/n13230518.md#1">基本工资审议 劳动部：10月上旬、国庆日前召开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/17/n13241949.md#1">学生打工 38%遇求职陷阱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/22/n13252963.md#1">基本工资审议敲定10月8日举行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13279129.md#1">农民工的黄金周是对社会主义优越性的讽刺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/7/n13288212.md#1">许铭春表态：基本工资涨幅有望达3%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/8/n13291098.md#1">台基本工资连6涨 月薪25250、时薪168</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/12/n13299410.md#1">军公教防疫有功 苏贞昌：鼓励朝调薪方向做</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/12/n13299419.md#1">台餐饮急需工读人力 基本时薪调幅恐无感</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/13/n13301929.md#1">移工拟有条件开放入台 劳长：完整接种疫苗者优先</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/13/n13301990.md#1">基本工资调涨 王美花：10月底前提配套</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388351.md#1">【舞蹈三剑客】神韵演员如何保持良好体态</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391932.md#1">【新闻看点】彭帅与巴赫视频 五大疑点拷问真相</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391433.md#1">【新闻大家谈】3天让彭帅4露面 中共会抛张高丽？</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389736.md#1">【军事热点】美日海军反潜战演习意在牵制中共</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13386820.md#1">党媒再发“彭帅照”难平众怒 恐冲击北京冬奥</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389152.md#1">岳山：北京二十大防反习 习家军铺满公安部</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演：影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391890.md#1">艺人大S与汪小菲宣布离婚 大陆网民反应两极</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391647.md#1">维生素E不只抗老 有4大功效 2招正确补充</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674994.md#1">【财商天下】普京出险招 欧盟如何应对</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675351.md#1">【横河观点】乌克兰抗俄给台湾的借鉴与启示</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675602.md#1">砸60万装修餐厅 《营业中》开播吸引粉丝前来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mvzvlt3463/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mvzvlt3463/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/17/n13310366.htm">薪资低于基本工资 自救方式报你知</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/17/n13310366.htm">薪资低于基本工资 自救方式报你知</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/17/n13310366.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mvzvlt3463/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mvzvlt3463/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/17/n13310366.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
